--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,7 @@ header{
 nav{
 	width: 50%;
 	float: right;
+	margin-top:86px;
 	
 }
 nav ul{
@@ -40,7 +41,10 @@ nav a{
 	display: block;
 	text-decoration: none;
 	background-color: #868686;
-	padding: 5px;
+	padding: 5px 8px;
+	height: 20px;
+	line-height: 20px;
+	font-size: 11px;
 	color: white;
-	letter-spacing: 3px;
+	letter-spacing: 1px;
 }
