--- a/css/style.css
+++ b/css/style.css
@@ -52,10 +52,12 @@ header h1{
 	font-weight: 700;
 	font-size: 40px;
 }
+/* section */
 #content{
 	background-color: white;
 	overflow: visible;
 }
+/* article */
 .post{
 	width:300px;
 	float: left;
@@ -91,6 +93,7 @@ blockquote:after {
 blockquote p {
   display: inline;
 }
+/* end section */
 footer{
 	background-color: white;
 	margin: 20px 0 50px 0;
